Add user Setting dropdown

--- a/SocialManagerAngular/src/app/_layout/header/header.component.html
+++ b/SocialManagerAngular/src/app/_layout/header/header.component.html
@@ -1,22 +1,21 @@
-<div class="header" >
+<div class="header thema__FB" >
     <div class="header__app__name__container">
         <div class="app__name">Social Manager</div>
     </div>
-    <div class="setings__container" [matMenuTriggerFor]="menu">
+    <div class="setings__container" (click)="selectdAppSetings()">
         <img class="setings__image" src="../../../assets/settings.png" />
     </div>
-    <div class="user__info__container">
+    <div class="user__info__container" #usertarget (click)="selectdUserSetings(usertarget)" (clickOutside)="unSelectedUserSetings($event)">
         <div class="user__name">
             <span class="user__name__text">Palii Ivan Vitalievici</span>
-            <span class="user__base__snetwork">Vkontacte</span>
+            <span class="user__login__snetwork">Vkontakte</span>
         </div>
         <div class="user__image" style="background-image: url('../../../assets/my-img.jpg')">
-            
-        </div>
+        </div>  
     </div>
 </div>
 
-<mat-menu #menu="matMenu"  yPosition="below" [overlapTrigger]="false" >
-  <button mat-menu-item style="width: 200px;">Item 1</button>
-  <button mat-menu-item>Item 2</button>
-</mat-menu>
+
+<div style="position: static; float: right;">
+    <app-user-setings *ngIf="isSelectedUserSetings"></app-user-setings>
+</div>
