--- a/SocialManagerAngular/src/app/_layout/side-bar/side-bar.component.html
+++ b/SocialManagerAngular/src/app/_layout/side-bar/side-bar.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-
+    <button style="background-color: white; border: 1px solid orange; width: 100%; height: 30px; margin-top: 10px;" routerLink="/news">News</button>
+    <button style="background-color: white; border: 1px solid orange; width: 100%; height: 30px; margin-top: 10px;" routerLink="/messages">Messags</button>
 </div>
