--- a/SocialManagerAngular/src/app/components/user-setings/user-setings.component.scss
+++ b/SocialManagerAngular/src/app/components/user-setings/user-setings.component.scss
@@ -1,10 +1,14 @@
-.container {
+.user-setings-container {
+    position: absolute;
+    right: 0;
+    z-index: 1;
     display: flex;
     flex-direction: column;
-    width: 200px;
+    width: 300px;
     background-color: white;
     box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-     .container__item {
+
+     .user__setings__container__item {
          display: flex;
          flex-direction: column;
          justify-content:space-around;
@@ -12,24 +16,50 @@
          height: 40px;
          border-bottom: 1px dashed rgba(0, 0, 0, 0);
 
-         .container__item__content {
+         .user__setings__container__item__content {
              display: flex;
              flex-direction: row;
              justify-content: space-between;
              margin-left: 15px;
              margin-right: 10px;
              
-             .container__item_text {
+             .user__setings__container__item_text {
                 font-family: 'Times New Roman', Times, serif;
              }
-
-             .container__item_img {
-                
-             }
          }
+
+         .user__setings__container__item__values {
+             padding-left: 10px;
+             padding-right: 10px;
+            height: 50px;
+            margin-top: 10px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            .user__setings__container__item__values_color {
+                width: 40px;
+                height: 40px;
+                border-radius: 50px;
+                border: 1px solid white;
+            }
+
+            .user__setings__container__item__values_color:hover {
+                border: 1px solid orange;
+            }
+        }
      }
 
-     .container__item:hover {
+     .user__setings__container__item:hover {
         background-color:rgba(121, 235, 255, 0.219); border-bottom: 1px dashed rebeccapurple;
     }
+    .user__setings__container__item--active {
+        background-color:rgba(121, 235, 255, 0.219); border-bottom: 1px dashed rebeccapurple;
+    }
+}
+
+.user__setings__container__item__resp {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: auto !important;
 }
