--- a/SocialManagerAngular/src/styles.scss
+++ b/SocialManagerAngular/src/styles.scss
@@ -12,7 +12,7 @@ body {
 }
 
 .thema__TW {
-    background-color: #4AB3F4;
+    background-color: #1DA1F2;
 }
 
 .thema__VK--active {
@@ -24,5 +24,5 @@ body {
 }
 
 .thema__TW--active {
-    background-color: #4AB3F4 + 15;
+    background-color: #1DA1F2 + 15;
 }
