Add midelvare for TwitchAuth

--- a/Stream-G.Angular/src/app/_layout/header/header.component.html
+++ b/Stream-G.Angular/src/app/_layout/header/header.component.html
@@ -5,8 +5,8 @@
     
     <div class="user__info__container" #usertarget (click)="selectdUserSetings(usertarget)" (clickOutside)="unSelectedUserSetings($event)">
         <div class="user__name">
-            <span class="user__name__text">Palii Ivan Vitalievici</span>
-            <span class="user__login__snetwork">Vkontakte</span>
+            <span class="user__name__text">BloodShok</span>
+            <span class="user__login__snetwork">-------------</span>
         </div>
             <div class="user__image" style="background-image: url('../../../assets/my-img.jpg')">
         </div>  
