--- a/Stream-G.Angular/src/app/pages/messages/messages.component.html
+++ b/Stream-G.Angular/src/app/pages/messages/messages.component.html
@@ -1,3 +1,5 @@
 <p>
-  messages works!
+  <!-- <a href="https://id.twitch.tv/oauth2/authorize?response_type=code&client_id=zelka51qk5amh7qm05a7vqtriwfv2k&redirect_uri=https://localhost:44349/api/TwitchAuthorization/authorize&scope=viewing_activity_read&state=http://localhost:4200/messages">Twistch</a> -->
 </p>
+<button (click)='authorizeTwitch()'>Twitch</button>
+<button (click)='getUserTwitch()'>User</button>
