--- a/Stream-G.Angular/src/app/pages/messages/messages.component.html
+++ b/Stream-G.Angular/src/app/pages/messages/messages.component.html
@@ -6,4 +6,6 @@
 <div *ngIf='user != null' style="margin-top: 30px; border: 1px solid red;">
   Hi {{user.displayName}}
   You Id is {{user.id}}
+
+  <p>{{user| json}}</p>
 </div>
