--- a/Stream-G.Angular/src/app/_layout/header/header.component.html
+++ b/Stream-G.Angular/src/app/_layout/header/header.component.html
@@ -8,7 +8,7 @@
             <span class="user__name__text">BloodShok</span>
             <span class="user__login__snetwork">-------------</span>
         </div>
-            <div class="user__image" style="background-image: url('../../../assets/my-img.jpg')">
+            <div *ngIf="user != null" class="user__image" [ngStyle]="{'background-image': usl}" style="background-size: 40px 40px">
         </div>  
     </div>
 </div>
